// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogoTextWithLock Component renders correctly with custom width and height 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="70"
  bbWidth="300"
  fill="none"
  focusable={false}
  height="70"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 70,
        "width": 300,
      },
    ]
  }
  vbHeight={64}
  vbWidth={256}
  width="300"
  xmlns="http://www.w3.org/2000/svg"
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={
        {
          "payload": 4279506459,
          "type": 0,
        }
      }
      height="56"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4289760599,
          "type": 0,
        }
      }
      strokeWidth="1.5"
      width="56"
      x="4"
      y="4"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4278716683,
          "type": 0,
        }
      }
      height="36"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4280954422,
          "type": 0,
        }
      }
      strokeWidth="1"
      width="36"
      x="14"
      y="14"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="2"
      width="14"
      x="25"
      y="20"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="1"
      width="6"
      x="29"
      y="32"
    />
    <RNSVGText
      content={null}
      dx={[]}
      dy={[]}
      fill={
        {
          "payload": 4294375158,
          "type": 0,
        }
      }
      font={
        {
          "fontFamily": "Inter",
          "fontSize": "26",
          "fontWeight": "500",
        }
      }
      propList={
        [
          "fill",
        ]
      }
      rotate={[]}
      x={
        [
          "72",
        ]
      }
      y={
        [
          "42",
        ]
      }
    >
      <RNSVGTSpan
        content="Lockwright"
        dx={[]}
        dy={[]}
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        font={{}}
        rotate={[]}
        x={[]}
        y={[]}
      />
    </RNSVGText>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`LogoTextWithLock Component renders correctly with default props 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="57"
  bbWidth="256"
  fill="none"
  focusable={false}
  height="57"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 57,
        "width": 256,
      },
    ]
  }
  vbHeight={64}
  vbWidth={256}
  width="256"
  xmlns="http://www.w3.org/2000/svg"
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGRect
      fill={
        {
          "payload": 4279506459,
          "type": 0,
        }
      }
      height="56"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4289760599,
          "type": 0,
        }
      }
      strokeWidth="1.5"
      width="56"
      x="4"
      y="4"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4278716683,
          "type": 0,
        }
      }
      height="36"
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      rx="2"
      stroke={
        {
          "payload": 4280954422,
          "type": 0,
        }
      }
      strokeWidth="1"
      width="36"
      x="14"
      y="14"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="2"
      width="14"
      x="25"
      y="20"
    />
    <RNSVGRect
      fill={
        {
          "payload": 4292128631,
          "type": 0,
        }
      }
      height="14"
      propList={
        [
          "fill",
        ]
      }
      rx="1"
      width="6"
      x="29"
      y="32"
    />
    <RNSVGText
      content={null}
      dx={[]}
      dy={[]}
      fill={
        {
          "payload": 4294375158,
          "type": 0,
        }
      }
      font={
        {
          "fontFamily": "Inter",
          "fontSize": "26",
          "fontWeight": "500",
        }
      }
      propList={
        [
          "fill",
        ]
      }
      rotate={[]}
      x={
        [
          "72",
        ]
      }
      y={
        [
          "42",
        ]
      }
    >
      <RNSVGTSpan
        content="Lockwright"
        dx={[]}
        dy={[]}
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        font={{}}
        rotate={[]}
        x={[]}
        y={[]}
      />
    </RNSVGText>
  </RNSVGGroup>
</RNSVGSvgView>
`;
